--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,16 +3,16 @@ import { SITE_TITLE } from '../consts';
 import HeaderLink from './HeaderLink.astro';
 ---
 
-<header>
-	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+<header class="m-0 py-0 px-[1em] bg-white shadow-header">
+	<nav class="flex items-center justify-between">
+		<h2 class="m-0 text-[1em]"><a class="px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink class="px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="/">Home</HeaderLink>
+			<HeaderLink class="px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="/blog">Blog</HeaderLink>
+			<HeaderLink class="px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="/about">About</HeaderLink>
 		</div>
-		<div class="social-links">
-			<a href="https://m.webtoo.ls/@astro" target="_blank">
+		<div class="hidden md:flex">
+			<a class="flex px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="https://m.webtoo.ls/@astro" target="_blank">
 				<span class="sr-only">Follow Astro on Mastodon</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
@@ -21,7 +21,7 @@ import HeaderLink from './HeaderLink.astro';
 					></path></svg
 				>
 			</a>
-			<a href="https://twitter.com/astrodotbuild" target="_blank">
+			<a class="flex px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="https://twitter.com/astrodotbuild" target="_blank">
 				<span class="sr-only">Follow Astro on Twitter</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
@@ -30,7 +30,7 @@ import HeaderLink from './HeaderLink.astro';
 					></path></svg
 				>
 			</a>
-			<a href="https://github.com/withastro/astro" target="_blank">
+			<a class="flex px-[0.5em] py-[1em] text-black border-b-[4px] border-solid border-transparent no-underline active:no-underline" href="https://github.com/withastro/astro" target="_blank">
 				<span class="sr-only">Go to Astro's GitHub repo</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
@@ -42,44 +42,3 @@ import HeaderLink from './HeaderLink.astro';
 		</div>
 	</nav>
 </header>
-<style>
-	header {
-		margin: 0;
-		padding: 0 1em;
-		background: white;
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
-	}
-	h2 {
-		margin: 0;
-		font-size: 1em;
-	}
-
-	h2 a,
-	h2 a.active {
-		text-decoration: none;
-	}
-	nav {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-	nav a {
-		padding: 1em 0.5em;
-		color: var(--black);
-		border-bottom: 4px solid transparent;
-		text-decoration: none;
-	}
-	nav a.active {
-		text-decoration: none;
-		border-bottom-color: var(--accent);
-	}
-	.social-links,
-	.social-links a {
-		display: flex;
-	}
-	@media (max-width: 720px) {
-		.social-links {
-			display: none;
-		}
-	}
-</style>
