--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,6 +7,7 @@ import FormattedDate from '../../components/FormattedDate.astro';
 import Header from '../../components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
 
+const basePath = import.meta.env.BASE_URL;
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
@@ -25,7 +26,7 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li class="w-full md:w-[calc(50%-1rem)] text-center first:w-full md:first:mb-4 first:mb-0 first:text-center">
-								<a class="block group" href={`/blog/${post.id}/`}>
+								<a class="block group" href={`${basePath}/blog/${post.id}/`}>
 									{post.data.heroImage && (
 										<Image class="mb-2 rounded-xl group-hover:shadow-custom transition" width={720} height={360} src={post.data.heroImage} alt="" />
 									)}
