--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import { Content } from '../content/home.md';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body class="bg-center-bg">
 		<Header />
-		<main class="w-[720px] mx-auto pt-15 pb-15 pl-5 pr-5">
+		<main class="w-[720px] mx-auto pt-15 pb-15 pl-5 pr-5 bg-post-bg">
 			<div class="prose">
 				<Content />
 			</div>
