--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -17,22 +17,25 @@ const posts = (await getCollection('blog')).sort(
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body class="bg-center-bg">
 		<Header />
-		<main class="w-[960px] mx-auto pt-15 pb-15 pl-5 pr-5">
+		<main class="w-[960px] mx-auto pt-15 pb-15 pl-5 pr-5 bg-[#F0F0F0]">
 			<section>
-				<ul class="flex flex-wrap m-0 p-0 list-none gap-[0.5em] md:gap-8 [&_li:first-child_img]:w-full md:[&_li:first-child_h4]:text-4xl">
+				<ul class="flex flex-wrap m-0 p-0 list-none gap-[0.5em] md:gap-8">
 					{
 						posts.map((post) => (
-							<li class="w-full md:w-[calc(50%-1rem)] text-center first:w-full md:first:mb-4 first:mb-0 first:text-center">
-								<a class="block group" href={`/blog/${post.id}/`}>
+							<li class="w-full text-center">
+								<a class="group flex" href={`/blog/${post.id}/`}>
 									{post.data.heroImage && (
-										<Image class="mb-2 rounded-xl group-hover:shadow-custom transition" width={720} height={360} src={post.data.heroImage} alt="" />
+										<Image class="mb-2 rounded-xl group-hover:shadow-custom transition" width={360} height={180} src={post.data.heroImage} alt="" />
 									)}
-									<h4 class="no-underline title m-0 leading-none text-black group-hover:text-accent transition">{post.data.title}</h4>
-									<p class="m-0 text-gray no-underline group-hover:text-accent transition">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
+									<div class="m-auto">
+										<h4 class="no-underline title m-0 leading-none text-post-link group-hover:text-accent transition">{post.data.title}</h4>
+										<p class="m-0 text-post-link no-underline">{post.data.category}</p>
+										<p class="m-0 text-gray no-underline">
+											<FormattedDate date={post.data.pubDate} />
+										</p>
+									</div>
 								</a>
 							</li>
 						))
