--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,14 @@
   --color-gray: rgb(96, 115, 159);
   --color-gray-dark: rgb(34, 41, 57);
   --color-black: rgb(15, 18, 25);
-  --color-accent: #2337ff;
+  --color-accent: #FFC107;
+  --color-header-bg: #6A0DAD;
+  --color-header-menu: #FFC107;
+  --color-footer-bg: #333333;
+  --color-footer-text: #F9F9F9;
+  --color-center-bg: #F9F9F9;
+  --color-post-bg: #EBEBEB;
+  --color-post-link: #6A0DAD;
   --shadow-custom: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px
 		rgba(var(--gray), 33%);
   --shadow-header: 0 2px 8px rgba(var(--black), 5%);
@@ -50,7 +57,6 @@
 		margin: 0;
 		padding: 0;
 		text-align: left;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
 		background-size: 100% 600px;
 		word-wrap: break-word;
 		overflow-wrap: break-word;
