--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,7 +8,7 @@ import Header from '../components/Header.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, category, description, pubDate, updatedDate, heroImage, heroImageWidth } = Astro.props;
 ---
 
 <html lang="en">
@@ -21,10 +21,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<main class="w-[960px] mx-auto pt-15 pb-15 pl-5 pr-5 bg-post-bg">
 			<article>
 				<div class="w-full">
-					{heroImage && <Image class="mb-auto mt-auto rounded-xl shadow-custom" width={1020} height={510} src={heroImage} alt="" />}
+					{heroImage && <Image class="m-auto rounded-xl shadow-custom" width={heroImageWidth} height={510} src={heroImage} alt="" />}
 				</div>
-				<div class="prose m-auto w-[720px] max-w-[calc(100%-2em)] p-4">
+				<div class="m-auto w-[720px] max-w-[calc(100%-2em)] p-4">
 					<div class="title mb-4 pt-4 pb-4 pr-0 pl-0 text-center leading-none">
+						<h6 class="mb-0.5 text-header-bg">{category}</h6>
+						<h2 class="m-0 p-0 font-bold">{title}</h2>
 						<div class="mb-[0.5em] text-gray">
 							<FormattedDate date={pubDate} />
 							{
@@ -35,10 +37,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 								)
 							}
 						</div>
-						<h1 class="mt-0 mr-0 mb-0.5 ml-0">{title}</h1>
 						<hr />
 					</div>
-					<slot />
+					<div class="prose">
+						<slot/>
+					</div>
 				</div>
 			</article>
 		</main>
