--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import AboutHeroImage from '../assets/blog-placeholder-about.jpg';
+import AboutHeroImage from '../assets/animeme.jpg';
 import Layout from '../layouts/BlogPost.astro';
 import { Content } from '../content/aboutme.md';
 ---
