--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,12 +8,13 @@
   --color-black: rgb(15, 18, 25);
   --color-accent: #FFC107;
   --color-header-bg: #6A0DAD;
-  --color-header-menu: #FFC107;
+  --color-header-menu: #F9F9F9;
   --color-footer-bg: #333333;
   --color-footer-text: #F9F9F9;
   --color-center-bg: #F9F9F9;
   --color-post-bg: #EBEBEB;
-  --color-post-link: #6A0DAD;
+  --color-post-link: rgb(15, 18, 25);
+  --color-post-border: rgb(15, 18, 25);
   --shadow-custom: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px
 		rgba(var(--gray), 33%);
   --shadow-header: 0 2px 8px rgba(var(--black), 5%);
