--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a class="no-underline text-gray hover:text-gray-dark" href="https://github.com/withastro/astro" target="_blank">
+		<a class="no-underline text-gray hover:text-gray-dark" href="https://github.com/danny-lee-tech/money-blog" target="_blank">
 			<span class="sr-only">Go to Astro's GitHub repo</span>
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/github"
 				><path
